--- a/main.tex
+++ b/main.tex
@@ -71,6 +71,7 @@
 \input{tex/3-architektura/main.tex}
 \input{tex/4-implementacja/main.tex}
 \input{tex/5-test/main.tex}
+\input{tex/6-podsumowanie/main.tex}
 
 %---------------
 % Literatura
